samples/_failures_safe/1761094121_8fb80a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_347f69e8.c: In function ‘main’:
./samples/SAFE/__tmp_347f69e8.c:142:12: error: missing terminating " character
  142 |     printf("\nSecond matrix
      |            ^~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_347f69e8.c:142:5: error: expected expression at end of input
  142 |     printf("\nSecond matrix
      |     ^~~~~~
./samples/SAFE/__tmp_347f69e8.c:142:5: error: expected declaration or statement at end of input
